<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_clicklabs"
    android:orientation="vertical"
    tools:context="com.skeleton.activity.AddCardActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/text_card_details"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_card_details"
        style="@style/edit_text"
        android:drawablePadding="@dimen/padding_normal"
        android:drawableStart="@drawable/visa_logo"
        android:hint="@string/text_hint_card_details"
        android:inputType="textNoSuggestions|phone"
        android:maxLength="@string/max_length_Card_Details"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <EditText
            android:id="@+id/et_card_date_picker"
            style="@style/edit_text"
            android:layout_weight="0.5"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableStart="@drawable/date_1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/text_hint_date"
            android:inputType="textNoSuggestions|phone"
            />

        <EditText
            style="@style/edit_text"
            android:id="@+id/et_cvv"
            android:layout_weight="0.5"
            android:drawablePadding="@dimen/padding_normal"
            android:hint="@string/text_hint_cvv"
            android:inputType="textNoSuggestions|phone"
            android:maxLength="@string/max_length_cvv"
            />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_resendOTP"
        style="@style/primary_button"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/round_button"
        android:text="@string/btn_add_card"
        android:textColor="@color/white"
        />

</android.support.v7.widget.LinearLayoutCompat>
