<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_xlarge"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHome"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="@string/home"/>

        <TextView
            android:id="@+id/tvWayToc"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="@string/booking"/>

        <TextView
            android:id="@+id/tvTimeTable"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="Time Table"/>


        <TextView
            android:id="@+id/tvChkp"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="Chalkpad"/>

        <TextView
            android:id="@+id/TvVideoLec"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="@string/notifications"/>

        <TextView
            android:id="@+id/tvAboutUs"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="@string/help"/>

        <TextView
            android:id="@+id/tvLogout"
            style="@style/drawer_text_view"
            android:onClick="onClick"
            android:text="Exit "/>
    </LinearLayout>


</LinearLayout>