<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.skeleton.activity.CarDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_large"
                android:orientation="vertical"
                >

                <android.support.v7.widget.AppCompatImageView
                    style="@style/wrap"
                    android:layout_gravity="center"
                    android:background="@mipmap/juspayicon"
                    />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/text_view"
                    android:text="@string/text_car_details"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_xxlarge"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_driving_license"
                    style="@style/edit_text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_attach_file"
                    android:background="@drawable/rectangle_edit_text"
                    android:hint="@string/met_driving_license"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_vehicle_type"
                    style="@style/edit_text_car_details"
                    android:hint="@string/met_vehicle_type"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_vehicle_company"
                    style="@style/edit_text_car_details"
                    android:hint="@string/met_vehicle_company"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_vehicle_year"
                    style="@style/edit_text_car_details"
                    android:hint="@string/met_vehicle_year"
                    />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_vehicle_number"
                    style="@style/edit_text"
                    android:background="@drawable/rectangle_edit_text"
                    android:hint="@string/met_vehicle_number"
                    />
                <RelativeLayout
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_car_images"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/iv_add_more_car"
                     android:src="@drawable/ic_add_a_photo"
                     android:layout_marginStart="3dp"
                     android:padding="5dp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                </RelativeLayout>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_continue"
                    style="@style/primary_button"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:background="@color/sky_blue"
                    android:text="@string/btn_submit"
                    android:textColor="@color/white"
                    />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
